RESOLVED FIXED 112591
[HTMLTemplateElement] parseError check in processTemplateEndTag should use hasTagName, not hasLocalName
https://bugs.webkit.org/show_bug.cgi?id=112591
Summary [HTMLTemplateElement] parseError check in processTemplateEndTag should use ha...
Rafael Weinstein
Reported 2013-03-18 10:17:56 PDT
This is a follow-up patch to https://bugs.webkit.org/show_bug.cgi?id=112487 based on a review comment from Adam Klein.
Attachments
Patch (1.53 KB, patch)
2013-03-18 10:19 PDT, Rafael Weinstein
no flags
Rafael Weinstein
Comment 1 2013-03-18 10:19:20 PDT
WebKit Review Bot
Comment 2 2013-03-18 11:41:55 PDT
Comment on attachment 193596 [details] Patch Clearing flags on attachment: 193596 Committed r146094: <http://trac.webkit.org/changeset/146094>
WebKit Review Bot
Comment 3 2013-03-18 11:41:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.