[HTMLTemplateElement] parseError check in processTemplateEndTag should use hasTagName, not hasLocalName https://bugs.webkit.org/show_bug.cgi?id=112591

Reviewed by Adam Barth.

No tests needed, change is unobservable.

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processTemplateEndTag):


Canonical link: https://commits.webkit.org/130901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146094 268f45cc-cd09-0410-ab3c-d52691b4dbfc